# grant_applications

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
evaluations/: ffplus-call-2-partb-final_evaluation.md
grant_evaluator/: aggregator.py  cli.py  config.py  criteria.py  db.py  evaluators.py  report.py  webapp.py
grant_evaluator/templates/: index.html
grant_researcher/: cli.py  config.py  db.py  matcher.py  proposals.py  report.py
grant_researcher/sources/: eu_funding.py  google_search.py  grants_gov.py  sam_gov.py  sbir_gov.py  ted_eu.py  trb_rip.py
